# comp-fab-slicer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Slicer.make  imgui.ini  lines.txt  premake5.lua  test.py  todo.md
include/: camera.h  contour.h  framebuffer.h  gcodeWriter.h  mesh.h  model.h  object.h  printer.h  resourceManager.h  resources.h  resources.h.in  shader.h  slice.h  slicer.h  state.h  utils.h
res/gcode/: angleTest.gcode  support-test_10.gcode
res/models/: angleTest.stl  chamfers.stl  cylinder.stl  floor-roof-test.stl  frames.stl  multiple_objects.stl  narrow_model.stl  rounded_frames.stl  start.stl  touching_objects.stl  tower.stl  two-roof-test.stl
res/shaders/: base.frag  base.vert  slice.vert
src/: camera.cpp  contour.cpp  framebuffer.cpp  gcodeWriter.cpp  main.cpp  mesh.cpp  model.cpp  object.cpp  printer.cpp  resourceManager.cpp  shader.cpp  slice.cpp  slicer.cpp
